k8s-rpi-apps-ingress/trilium-ingress/trilium-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trilium-shared
  annotations:
    service.cilium.io/global: "true"     
  labels:
    app.kubernetes.io/name: trilium
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app.kubernetes.io/name: trilium
